--- a/.gitmodules
+++ b/.gitmodules
@@ -103,3 +103,6 @@
 [submodule "bundle/vim-project"]
 	path = bundle/vim-project
 	url = https://github.com/shemerey/vim-project.git
+[submodule "bundle/molokai"]
+	path = bundle/molokai
+	url = https://github.com/bartekd/molokai.git
