--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "bundle/gitv"]
 	path = bundle/gitv
 	url = https://github.com/gregsexton/gitv.git
+[submodule "bundle/pairtools"]
+	path = bundle/pairtools
+	url = https://github.com/vim-scripts/PairTools.git
