--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "bundle/vcscommand.vim"]
 	path = bundle/vcscommand.vim
 	url = https://github.com/vim-scripts/vcscommand.vim.git
+[submodule "bundle/xoria256"]
+	path = bundle/xoria256
+	url = https://github.com/bartekd/xoria256.vim
