--- a/.gitmodules
+++ b/.gitmodules
@@ -151,3 +151,9 @@
 [submodule "bundle/tail-bundle"]
 	path = bundle/tail-bundle
 	url = https://github.com/vim-scripts/Tail-Bundle.git
+[submodule "bundle/vim-rake"]
+	path = bundle/vim-rake
+	url = https://github.com/tpope/vim-rake.git
+[submodule "bundle/vim-bundler"]
+	path = bundle/vim-bundler
+	url = https://github.com/tpope/vim-bundler.git
