--- a/.gitmodules
+++ b/.gitmodules
@@ -111,4 +111,10 @@
 	url = git://github.com/tomtom/tlib_vim.git
 [submodule "bundle/vim-addon-mw-utils"]
 	path = bundle/vim-addon-mw-utils
-	url = git://github.com/MarcWeber/vim-addon-mw-utils.git
+        url = git://github.com/MarcWeber/vim-addon-mw-utils.git
+[submodule "bundle/snipmate-snippets"]
+	path = bundle/snipmate-snippets
+	url = git://github.com/scrooloose/snipmate-snippets.git
+[submodule "bundle/xoria256"]
+	path = bundle/xoria256
+	url = git://github.com/bartekd/xoria256.vim.git
