--- a/.gitmodules
+++ b/.gitmodules
@@ -151,3 +151,9 @@
 	path = bundle/git-vim
 	url = https://github.com/motemen/git-vim.git
         ignore = untracked
+[submodule "bundle/tabular"]
+	path = bundle/tabular
+	url = https://github.com/godlygeek/tabular.git
+[submodule "bundle/gundo"]
+	path = bundle/gundo
+	url = https://github.com/sjl/gundo.vim.git
