--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,10 @@
 [submodule "bundle/xoria256"]
 	path = bundle/xoria256
-	url = git://github.com/bartekd/xoria256.vim.git
+	url = git@github.com:bartekd/xoria256.vim.git
         ignore = untracked
 [submodule "bundle/vim-addon-manager"]
 	path = bundle/vim-addon-manager
 	url = https://github.com/MarcWeber/vim-addon-manager.git
+[submodule "bundle/rbrepl.vim"]
+	path = bundle/rbrepl.vim
+	url = https://github.com/Bogdanp/rbrepl.vim.git
