use monaco on MacVim

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "bundle/xoria256"]
-	path = bundle/xoria256
-	url = git@github.com:bartekd/xoria256.vim.git
-        ignore = untracked
 [submodule "bundle/vim-addon-manager"]
 	path = bundle/vim-addon-manager
 	url = https://github.com/MarcWeber/vim-addon-manager.git
@@ -13,3 +9,6 @@
 [submodule "bundle/hemisu"]
 	path = bundle/hemisu
 	url = https://github.com/noahfrederick/Hemisu.git
+[submodule "bundle/xoria256"]
+	path = bundle/xoria256
+	url = https://github.com/bartekd/xoria256.vim.git
