add golang support

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -47,6 +47,18 @@
         "terraform"
       ],
       "initializationOptions": {}
+    },
+    "golang": {
+      "command": "gopls",
+      "rootPatterns": [
+        "go.mod",
+        ".vim/",
+        ".git/",
+        ".hg/"
+      ],
+      "filetypes": [
+        "go"
+      ]
     }
   }
 }
